// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Component] InputField Should call validate on focusOut and setValues on change - textarea 1`] = `
<div>
  <div
    class="Wrapper"
  >
    <textarea
      class="Textarea"
      id="name"
      name="name"
      style="min-height: 30px; height: 0px;"
    />
  </div>
</div>
`;

exports[`[Component] InputField Should call validate on focusOut and setValues on change - textfield 1`] = `
<div>
  <div
    class="Wrapper"
  >
    <input
      class="ContactInput"
      id="name"
      maxlength="255"
      name="name"
      pattern=""
      placeholder="Test placeholder"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`[Component] InputField Should display error message 1`] = `
<div>
  <div
    class="Wrapper"
  >
    <input
      class="ContactInput HasError"
      id="name"
      maxlength="255"
      name="name"
      pattern=""
      placeholder="Test placeholder"
      type="text"
      value=""
    />
    <span
      class="ErrorMessage"
      data-testid="input-field-error-message"
    >
      ERROR
    </span>
  </div>
</div>
`;

exports[`[Component] InputField Should render a checkbox input field 1`] = `
<div>
  <div
    class="Wrapper"
  >
    <div
      class="Row"
    >
      <div
        class="ColXs4 ColSm2"
      >
        <input
          class="ContactInput"
          id="name"
          name="name"
          type="checkbox"
        />
      </div>
      <div
        class="ColXs20 ColSm22"
      >
        <label
          class=""
          for="name"
        >
          Test placeholder
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`[Component] InputField Should render a date input field 1`] = `
<div>
  <div
    class="Wrapper"
  >
    <input
      class="ContactInput"
      id="name"
      maxlength="255"
      name="name"
      pattern=""
      placeholder="Test placeholder"
      type="date"
      value=""
    />
  </div>
</div>
`;

exports[`[Component] InputField Should render a email input field 1`] = `
<div>
  <div
    class="Wrapper"
  >
    <input
      class="ContactInput"
      id="name"
      maxlength="255"
      name="name"
      pattern=""
      placeholder="Test placeholder"
      type="email"
      value=""
    />
  </div>
</div>
`;

exports[`[Component] InputField Should render a hidden input field 1`] = `
<div>
  <div
    class="Wrapper"
  >
    <input
      id="name"
      name="name"
      type="hidden"
      value=""
    />
  </div>
</div>
`;

exports[`[Component] InputField Should render a number input field 1`] = `
<div>
  <div
    class="Wrapper"
  >
    <input
      class="ContactInput"
      id="name"
      maxlength="255"
      name="name"
      pattern=""
      placeholder="Test placeholder"
      type="number"
      value=""
    />
  </div>
</div>
`;

exports[`[Component] InputField Should render a radio input field 1`] = `
<div>
  <div
    class="Wrapper"
  >
    <div
      class="Row"
    >
      <div
        class="ColXs4 ColSm2"
      >
        <input
          class=""
          id="name"
          name="name"
          type="radio"
        />
      </div>
      <div
        class="ColXs20 ColSm22"
      >
        <label
          class=""
          for="name"
        >
          Test placeholder
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`[Component] InputField Should render a textarea input field 1`] = `
<div>
  <div
    class="Wrapper"
  >
    <textarea
      class="Textarea"
      id="name"
      name="name"
      placeholder="Test placeholder"
      style="min-height: 30px;"
    />
  </div>
</div>
`;

exports[`[Component] InputField Should render a textfield input field 1`] = `
<div>
  <div
    class="Wrapper"
  >
    <input
      class="ContactInput"
      id="name"
      maxlength="255"
      name="name"
      pattern=""
      placeholder="Test placeholder"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`[Component] InputField Should render animated label 1`] = `
<div>
  <div
    class="Wrapper"
  >
    <label
      class="Label LabelInside"
      data-testid="input-field-animated-label"
      for="name"
    >
      ANIMATED LABEL
    </label>
    <input
      class="ContactInput"
      id="name"
      maxlength="255"
      name="name"
      pattern=""
      placeholder=""
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`[Component] InputField Should render animated label with * required indicator 1`] = `
<div>
  <div
    class="Wrapper"
  >
    <label
      class="Label LabelInside"
      data-testid="input-field-animated-label"
      for="name"
    >
      Test placeholder
      *
    </label>
    <input
      class="ContactInput"
      id="name"
      maxlength="255"
      name="name"
      pattern=""
      placeholder=""
      required=""
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`[Component] InputField Should render correctly 1`] = `
<div>
  <div
    class="Wrapper"
  >
    <input
      class="ContactInput"
      id="name"
      maxlength="255"
      name="name"
      pattern=""
      placeholder="Test placeholder"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`[Component] InputField Should render placeholder instead of error message 1`] = `
<div>
  <div
    class="Wrapper"
  >
    <input
      class="ContactInput HasError"
      id="name"
      maxlength="255"
      name="name"
      pattern=""
      placeholder="ERROR PLACEHOLDER"
      type="text"
      value=""
    />
    <span
      class="ErrorMessage"
      data-testid="input-field-error-message"
    >
      ERROR PLACEHOLDER
    </span>
  </div>
</div>
`;
